@@ -33,5 +33,6 @@ dependencies {
 	
 	testCompile(
 		'ch.qos.logback:logback-classic:1.1.3'
+		'junit:junit:4.12'
 	)
 }
