@@ -1,0 +1,12 @@
+package com.xiaoleilu.hutool.test;
+
+/**
+ * 仅用于临时测试
+ * 
+ * @author Looly
+ *
+ */
+public class Test {
+	public static void main(String[] args) {
+	}
+}
